--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ Django==2.0.2
 django-cors-headers==2.1.0
 django-filter==1.1.0
 djangorestframework==3.7.7
+gunicorn==19.7.1
 Markdown==2.6.11
 pytz==2018.3
-psycopg2==2.5.3
